<resources>
    <string name="app_name">Tutorial_03_IntentsProJ</string>
    <string name="txtView1">Number 1</string>
    <string name="txtView2">Number 2</string>
    <string name="btn1">Calculate</string>
    <string name="btnAdd">+</string>
    <string name="btnSub">-</string>
    <string name="btnMul">x</string>
    <string name="btnDiv">/</string>
    <string name="btnBack"><![CDATA[<<Back]]></string>
    <string name="viewAnswer" />
</resources>